# agentform

./: .gitignore  LICENSE  Makefile  README.md
.github/scripts/: bump-version.sh
.github/workflows/: bump-version.yml  ci.yml  codeql.yml  publish.yml  release.yml
acp-api/acp_api/: client.py
acp-api/tests/: test_client.py
acp-cli/: pyproject.toml
acp-cli/acp_cli/: __init__.py  main.py
acp-cli/acp_cli/commands/: __init__.py  compile.py  init.py  run.py  validate.py
acp-cli/tests/: test_run.py  test_validate.py
acp-compiler/: README.md  pyproject.toml
acp-compiler/acp_compiler/: __init__.py  acp_ast.py  acp_grammar.lark  acp_module_loader.py  acp_module_resolver.py  acp_normalizer.py  acp_parser.py  acp_resolver.py  acp_validator.py  compiler.py  credentials.py  ir_generator.py  parser.py  validator.py
acp-compiler/tests/: test_acp_compiler.py  test_acp_normalizer.py  test_acp_parser.py  test_acp_resolver.py  test_acp_validator.py  test_compiler.py  test_module_loader.py  test_modules.py  test_multifile.py
acp-mcp/: README.md  pyproject.toml
acp-mcp/acp_mcp/: __init__.py  client.py  server.py  types.py
acp-runtime/: README.md  pyproject.toml
acp-runtime/acp_runtime/: __init__.py  approval.py  engine.py  llm.py  logging_config.py  policy.py  state.py  tracing.py
acp-schema/: README.md  pyproject.toml
acp-schema/acp_schema/: __init__.py  ir.py  models.py  version.py
agentform-cli/: pyproject.toml
agentform-compiler/: pyproject.toml
agentform-mcp/: pyproject.toml
agentform-runtime/: pyproject.toml
agentform-schema/: pyproject.toml
agentform-schema/agentform_schema/: version.py
docs/: _config.yml  architecture.md  cli-reference.md  examples.md  getting-started.md  index.md  modules.md
docs/_layouts/: default.html
docs/assets/css/: style.css
examples/: README.md  filesystem-agent.yaml  filesystem-article.txt  filesystem-input.json  multi-agent.yaml  pr-reviewer.yaml  simple-input.json
examples/filesystem-agent/: 00-project.acp  README.md  spec.acp
examples/module-example/: 00-project.acp  01-variables.acp  02-modules.acp  README.md  input.yaml
examples/module-example/modules/llm-toolkit/: 00-project.acp
examples/module-example/modules/simple-acp-module/: 00-project.acp  01-variables.acp  02-providers.acp  03-policies.acp  04-models.acp  05-agents.acp  06-workflows.acp
examples/multi-agent/: 00-project.acp  README.md  spec.acp
examples/pr-reviewer/: README.md
examples/simple-agent/: 00-project.acp  README.md  spec.acp
