[tool.poetry]
name = "acp-cli"
version = "0.1.0"
description = "CLI interface for ACP"
authors = ["ACP Team"]
readme = "README.md"
packages = [{include = "acp_cli"}]

[tool.poetry.scripts]
acp = "acp_cli.main:app"

[tool.poetry.dependencies]
python = "^3.12"
acp-schema = {path = "../acp-schema", develop = true}
acp-mcp = {path = "../acp-mcp", develop = true}
acp-compiler = {path = "../acp-compiler", develop = true}
acp-runtime = {path = "../acp-runtime", develop = true}
typer = ">=0.12,<1.0"
rich = "^13.7"
structlog = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
