[tool.poetry]
name = "acp-cli"
version = "0.1.0"
description = "CLI interface for ACP"
authors = ["ACP Team"]
readme = "README.md"
license = "MIT"
packages = [{include = "acp_cli"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/acp-team/acp"
"Repository" = "https://github.com/acp-team/acp"

[tool.poetry.scripts]
acp = "acp_cli.main:app"

[tool.poetry.dependencies]
python = "^3.12"
acp-schema = "^0.1.0"
acp-mcp = "^0.1.0"
acp-compiler = "^0.1.0"
acp-runtime = "^0.1.0"
typer = ">=0.12,<1.0"
rich = "^13.7"
structlog = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
