[tool.poetry]
name = "acp-compiler"
version = "0.1.0"
description = "YAML compilation and validation for ACP"
authors = ["ACP Team"]
readme = "README.md"
packages = [{include = "acp_compiler"}]

[tool.poetry.dependencies]
python = "^3.12"
acp-schema = {path = "../acp-schema", develop = true}
acp-mcp = {path = "../acp-mcp", develop = true}
pydantic = "^2.5"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

