[tool.poetry]
name = "acp-compiler"
version = "0.0.1"
description = "YAML compilation and validation for ACP"
authors = ["ACP Team"]
readme = "README.md"
license = "MIT"
packages = [{include = "acp_compiler"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/acp-team/acp"
"Repository" = "https://github.com/acp-team/acp"

[tool.poetry.dependencies]
python = "^3.12"
acp-schema = {path = "../acp-schema", develop = true}
acp-mcp = {path = "../acp-mcp", develop = true}
pydantic = "^2.5"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

