[tool.poetry]
name = "acp-schema"
version = "0.1.0"
description = "Core data models and YAML schemas for ACP"
authors = ["ACP Team"]
readme = "README.md"
license = "MIT"
packages = [{include = "acp_schema"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/acp-team/acp"
"Repository" = "https://github.com/acp-team/acp"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

